apps/cortex-security/falco-falcosidekick-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: falco
    meta.helm.sh/release-namespace: cortex-security
    prometheus.io/scrape: 'true'
  labels:
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.31.1
    helm.sh/chart: falcosidekick-0.11.1
  name: falco-falcosidekick
  namespace: cortex-security
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 2801
    protocol: TCP
    targetPort: http
  - name: http-notls
    port: 2810
    protocol: TCP
    targetPort: http-notls
  selector:
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: falcosidekick
  sessionAffinity: None
  type: ClusterIP
