apps/cortex-security/falco-falcosidekick-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: falco
    meta.helm.sh/release-namespace: cortex-security
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.31.1
    helm.sh/chart: falcosidekick-0.11.1
  name: falco-falcosidekick-ui
  namespace: cortex-security
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 2802
    protocol: TCP
    targetPort: 2802
  selector:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: falcosidekick
  sessionAffinity: None
  type: ClusterIP
