apps/cortex-security/falco-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: falco
    meta.helm.sh/release-namespace: cortex-security
  labels:
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falco
    app.kubernetes.io/version: 0.42.1
    helm.sh/chart: falco-7.0.5
    type: falco-metrics
  name: falco-metrics
  namespace: cortex-security
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: metrics
    port: 8765
    protocol: TCP
    targetPort: 8765
  selector:
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: falco
  sessionAffinity: None
  type: ClusterIP
