apps/cortex-security/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: redis
    cortex.ai/component: security-monitoring
  name: redis
  namespace: cortex-security
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  sessionAffinity: None
  type: ClusterIP
